Fix font display on Safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    font-family: "Roc Grotesk";
+    font-family: "roc-grotesk";
     font-weight: 400;
     font-style: normal;
     line-height: 1.2;
@@ -132,7 +132,7 @@ a.inner-link:hover {
 }
 
 .text-headline {
-    font-family: "Roc Grotesk";
+    font-family: "roc-grotesk";
     font-style: normal;
     font-size: var(--text-size);
     font-weight: 700;
@@ -146,7 +146,7 @@ a.inner-link:hover {
 
 
 .main-text {
-    font-family: "Roc Grotesk";
+    font-family: "roc-grotesk";
     font-weight: 400;
     font-style: normal;
     font-size: var(--main-text-size);
@@ -158,7 +158,7 @@ a.inner-link:hover {
 }
 
 .text-title {
-    font-family: "Roc Grotesk";
+    font-family: "roc-grotesk";
     font-style: normal;
     font-size: var(--main-text-size);
 }
@@ -168,7 +168,7 @@ a.inner-link:hover {
 }
 
 .text {
-    font-family: "Roc Grotesk";
+    font-family: "roc-grotesk";
     font-weight: 400;
     font-style: normal;
     font-size: var(--text-size);
@@ -229,7 +229,7 @@ a.inner-link:hover {
 }
 
 .button {
-    font-family: "Roc Grotesk";
+    font-family: "roc-grotesk";
     font-weight: 400;
     font-style: normal;
     font-size: var(--main-text-size);
@@ -251,7 +251,7 @@ a.inner-link:hover {
 .footer {
     width: 100%;
     height: auto;
-    font-family: "Roc Grotesk";
+    font-family: "roc-grotesk";
     font-weight: 300;
     font-size: var(--text-size);
     color: var(--color-white);
